# imgui_glfw_practics

./: CMakeLists.txt  README.md  drawing.h  gui.cpp  gui.h  main.cpp  shaders.cpp  shaders.h  window.cpp  window.h
shaders/: base.shader
